Importing the component

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <!--
 @license
 Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
@@ -7,3 +8,25 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
+<html>
+<head>
+
+  <script src="../webcomponentsjs/webcomponents.js"></script>
+  <link rel="import" href="../core-component-page/core-component-page.html">
+
+</head>
+<body unresolved>
+
+  <core-component-page
+    sources='[
+    "ag-data-grid.html",
+    "column/ag-data-grid-column.html",
+    "filter/select/item/ag-data-grid-filter-select-item.html",
+    "filter/select/ag-data-grid-filter-select.html",
+    "filter/toggle/ag-data-grid-filter-toggle.html",
+    "search/ag-data-grid-search.html"
+    ]'>
+    </core-component-page>
+
+</body>
+</html>
